// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Divider Dashed 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <hr
      class="sc-iUuytg kDfphZ sc-eggNIi escNXG"
      type="dashed"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Divider Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <hr
      class="sc-iUuytg fFHqGT sc-eggNIi escNXG"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Divider With Custom Color 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <hr
      class="sc-iUuytg tCbFq sc-eggNIi blChIG"
      color="#ccc"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Divider With Text Content 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <div
      class="sc-gKsewC cgpPfo sc-iBPRYJ kCgyvI sc-hHftDr bxfdfp sc-eggNIi escNXG"
    >
      <hr
        class="sc-iUuytg sc-iBaPrD kDfphZ SWHog"
        type="dashed"
      />
      <span
        class="sc-fKFyDc jHCVxA sc-iwyYcG fZreIp"
      >
        some text
      </span>
      <hr
        class="sc-iUuytg sc-iBaPrD kDfphZ SWHog"
        type="dashed"
      />
    </div>
  </div>
</div>
`;
